test/types/range/hilde/rangeSliceStatic.good
rangeSliceStatic.chpl:8: error: syntax error near '('
rangeSliceStatic.chpl:9: error: syntax error near '['
